# AI-Native

./: .gitignore  109_COMPLETE_FLOW_VERIFICATION.md  109环境Agent启用计划.md  AGENTS.md  AGENTS_STARTUP_SUCCESS.md  COMPLETE_VERIFICATION_WITH_A6_A12_KNOWLEDGE.md  DEPLOY.md  END_TO_END_TEST_REPORT.md  FINAL_E2E_TEST_REPORT.md  LLM_LOOP_DEEP_ANALYSIS.md  LLM_LOOP_ROOT_CAUSE_FINAL.md  README.md  REVISED_WORK_ESTIMATE.md  SYSTEM_READINESS_ASSESSMENT.md  TASK_40_IMPLEMENTATION_SUMMARY.txt  TASK_41_QUICK_REFERENCE.txt  TASK_41_SUMMARY.txt  TASK_41_VERIFICATION.txt  check_spec.py  package-lock.json  update_spec.py
.ai-native/: context-budget.yaml  project-config.yaml
deploy/: .env.example  README.md  ai-native-backend.service  docker-compose.prod.yml
doc/: AI-Native研发协同系统-00-总纲与导读.md  AI-Native研发协同系统-01-调研与立项报告.md  AI-Native研发协同系统-02-多Agent编排架构与设计规格.md  AI-Native研发协同系统-03-人机协同与指挥舱产品总览.md  AI-Native研发协同系统-04-Agent协作与触发机制详规.md  AI-Native研发协同系统-05-技术栈与工程落地详规.md  PHASE_6_7_IMPLEMENTATION_PLAN.md  README.md  remaining-work.md  系统状态机与信息流设计.md
frontend/: next.config.ts  package-lock.json  package.json
repos/: DEPLOYMENT_NOTES.txt  IMPLEMENTATION_A4_ERD_DESIGNER.md  SSE_ACTIVITY_STREAMING_GUIDE.md  TASK_29_COMPLETION.txt  TASK_36_COMPLETION_REPORT.txt  TASK_36_IMPLEMENTATION.md  TASK_38_COMPLETION.txt  TASK_38_IMPLEMENTATION.md  TASK_38_INDEX.md  (+3 more)
repos/llm-provider/: README.md  pyproject.toml  setup.py
repos/llm-provider/llm_provider/: __init__.py  adapter.py  anthropic_adapter.py  audit.py  config.yaml  context.py  deepseek_adapter.py  glm_adapter.py  manager.py  qwen_adapter.py
(+738 files in other folders)
