[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "llm-provider"
version = "0.1.0"
description = "LLM Provider Abstraction Layer with intelligent routing"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "AI Native Team" },
]
dependencies = [
    "httpx>=0.24.0",
    "pyyaml>=6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.18.0"]

[tool.setuptools.packages.find]
include = ["llm_provider*"]
